🐞 fix: section 3 alignment changes for small screens

--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
                 </div>
 
 
-                <div class="col ms-3 mt-3 mt-lg-0">
+                <div class="col ms-lg-3 mt-3 mt-lg-0">
                     <div class="solution-text">
                         <h2 class="text-center text-lg-start" style="font-size: 36px;
                         font-weight: 700;
