🐞 fix: section 1 bug

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 <div class="col">
                     <!-- --image-- -->
                     <div class="trafalgar-image">
-                        <img src="/trafalgar-landing-page/illustration.png" class="img-fluid">
+                        <img src="/trafalgar-landing-page/illustration.png" class="img-fluid w-100">
                     </div>
                 </div>
 
