🐞 fix: bug fixes

--- a/index.html
+++ b/index.html
@@ -326,7 +326,10 @@
 
         <!-- ---------------------------------------section-5------------------------------------------------- -->
 
-        <section class="reviews-carousel container-lg mt-4 mt-lg-5">
+        <section class="reviews-carousel container-lg mt-4 mt-lg-5 position-relative">
+
+
+
 
             <div class="carousel slide  " id="carouselExample">
                 <div class="carousel-inner">
@@ -340,11 +343,16 @@
                                 <img src="/trafalgar-landing-page/sec-5-right.png" alt="">
                             </div>
 
-                            <h2 class="card-header  text-center fs-3 fw-medium">
+                            <h2 class="card-header  text-center fs-3 fw-medium mt-3 mb-2">
                                 What our customer are saying
+
                             </h2>
-                            <div class="row g-0 flex-lg-row flex-column">
-                                <div class="col d-flex align-items-center ps-lg-5 flex-lg-row flex-column">
+                            <span class="small-line mt-2 mb-2"
+                                style="width: 60px; height: 2px; background-color: white; display: block; margin-inline: auto;"></span>
+
+                            <div class="row g-0 flex-lg-row flex-column justify-content-around px-lg-5 mb-4 mt-4">
+                                <div
+                                    class="col d-flex align-items-center ps-lg-5 flex-lg-row flex-column justify-content-center">
                                     <img src="/trafalgar-landing-page/reviewer image.png"
                                         class="img-fluid rounded-start" alt="...">
 
@@ -515,7 +523,9 @@
             </div>
 
 
-
+            <div class="sec5-l-img position-absolute" style="bottom: 10%; left: 0;">
+                <img src="/trafalgar-landing-page/bet-3-4.png" alt="">
+            </div>
         </section>
 
 
