--- a/index.html
+++ b/index.html
@@ -227,13 +227,16 @@
 
                 <div class="position-absolute" style="top: 50%;
     right: 10%; z-index: -2;"><img src="/trafalgar-landing-page/sec-2.png" alt=""></div>
+
+
+
+
+
+
+
+
             </div>
 
-
-
-            <div class="bg-img-section-2 position-absolute" style="top: 15%; left:-1; z-index: -1;">
-                <img src="/trafalgar-landing-page/bg-sec-2.png" alt="">
-            </div>
 
 
         </section>
@@ -259,6 +262,9 @@
                         <h2 class="text-center text-lg-start" style="font-size: 36px;
                         font-weight: 700;
                         color: #000;">Leading healthcare providers</h2>
+                        <span class="small-line mb-3 mt-3"
+                            style="width: 60px; height: 2px; background-color: black; display: block;"></span>
+
                         <p class="text-center text-md-start  mt-3">Trafalgar provides progressive, and affordable
                             healthcare, accessible on mobile
                             and
@@ -297,6 +303,9 @@
                             <h2 class="text-center text-lg-start" style="font-size: 36px;
                                 font-weight: 700;
                                 color: #000;">Download our mobile apps</h2>
+                            <span class="small-line mb-3 mt-3"
+                                style="width: 60px; height: 2px; background-color: black; display: block;"></span>
+
                             <p class="text-center text-md-start mt-3">Our dedicated patient engagement app and
                                 web portal allow you to access information instantaneously (no tedeous form, long calls,
                                 or administrative hassle) and securely</p>
@@ -615,10 +624,10 @@
 
             </div>
 
-            <div class="sec-6-r-bg position-absolute" style="top: 0; right: 0; z-index: -6; overflow: hidden;">
+            <!-- <div class="sec-6-r-bg position-absolute" style="top: 0; right: 0; z-index: -6; overflow: hidden;">
                 <img src="/trafalgar-landing-page/Vector.svg" alt=""
                     style="width: 100%; height: 100%; object-fit: cover; opacity: 0.7;">
-            </div>
+            </div> -->
         </section>
 
 
