🐞 fix: minor bug fixes

--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
                         <h2 class="text-center text-lg-start" style="font-size: 36px;
                         font-weight: 700;
                         color: #000;">Leading healthcare providers</h2>
-                        <span class="small-line mb-3 mt-3"
+                        <span class="small-line mb-3 mt-3 mx-auto mx-lg-0"
                             style="width: 60px; height: 2px; background-color: black; display: block;"></span>
 
                         <p class="text-center text-md-start  mt-3">Trafalgar provides progressive, and affordable
@@ -303,7 +303,7 @@
                             <h2 class="text-center text-lg-start" style="font-size: 36px;
                                 font-weight: 700;
                                 color: #000;">Download our mobile apps</h2>
-                            <span class="small-line mb-3 mt-3"
+                            <span class="small-line mb-3 mt-3 mx-auto mx-lg-0"
                                 style="width: 60px; height: 2px; background-color: black; display: block;"></span>
 
                             <p class="text-center text-md-start mt-3">Our dedicated patient engagement app and
